--- a/day two/03-input.html
+++ b/day two/03-input.html
@@ -6,10 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="checkbox">
-    <input type="password">
-    <input type="radio">
-    <input type="text">
-    <input type="file">
+    <input type="checkbox" placeholder="sda">
+    <input type="password" placeholder="password">
+    <input type="radio" name="gender" checked>
+    <input type="radio" name="gender">
+    <input type="radio" name="gender">
+    <input type="text" placeholder="dasd">
+    <input type="file" multiple>
+
 </body>
-</html>
+</html>√
